# setretrieval

./: .gitignore  CLAUDE.md  README.md  bigdatagen.sh  cache  data  datagen.sh  ds_config.json  embanalysis.sh  eval.sh  evtmp.out  imp_evset.sh  logs  pyproject.toml  run_autoregresscheck.sh  runapi.sh  starterpapers.json  training.sh  transform_fiqa.sh  useqs.sh
exp_shfiles/: analysiseval.sh  bigparaphrase.sh  evaltopk.sh  fresheval.sh  infocomp.sh  multidoc_test.sh  nq_processing.sh  qveval.sh  qvscalingtrains.sh  test_dynamic_train.sh  test_topk.sh  topkeval.sh  traintopk.sh  transform_comptest.sh
explore/: test_gepa.py
notebooks/: analyse_detailedpreds.ipynb  analyse_errors.ipynb  construct_math_tasks.ipynb  construct_toydata.ipynb  debug_colbert.ipynb  debug_embedinf.ipynb  diversity_analysis.ipynb  embed_scale_exps.ipynb  examine_data.ipynb  linearscan_setup.ipynb  process_largechunkdata.ipynb  process_monitor_setdata.ipynb  reformat_data_tmp.ipynb
scripts/: analyse_datapreds.py  analyse_metric_smoothness.py  areg_ar.py  autoreg_lim.py  beireval.py  corplens.py  generate_impossible_eval_set.py  generate_impossible_train_set.py  generate_setpositives.py  generate_starterquestions.py  linscan_validation.py  make_nq_evalset.py  make_transformed_evalsets.py  nq_fullchunk_setup.py  nq_summarize_chunks.py  paraphrase_robustness_eval.py  posthoc_eval.py  scrape_citationdata.py  test_embdiversity.py  test_generative.py  train.py  train_autoreg_colbert.py  train_diffusion_colbert.py  train_pylate_pairwise.py  train_st_orig.py  transform_corpus.py  wikipedia_eval.py
(+116 files in other folders)
